# distributed_LLM_learning_simulator

./: README.md  convert_bio.sh  convert_re.sh  convert_test.sh  convert_train.sh  datapipeline_mixin.py  dataset_analyzer.sh  evaluate.sh  fix.sh  iid_convert_train.sh  iid_json_convert_train.sh  json_converter.py  pyproject.toml  re_evaluate.sh  requirements.txt  simulator.py  test.sh  train.sh  train_bert.sh  train_mix.sh  train_re.sh
conf/: global.yaml
conf/llm/: DeepSeek-R1-Distill-Llama-8B.yaml  Meta-Llama-3-1B.yaml  Meta-Llama-3-8B.yaml  Qwen3-4B.yaml
conf/medical_llm/: Meta-Llama-3-8B-Instruct.yaml
conf/medical_mix/: DeepSeek-R1-Distill-Llama-8B.yaml  Meta-Llama-3-8B.yaml  common.yaml
conf/medical_ner/: DeepSeek-R1-Distill-Llama-8B.yaml  Meta-Llama-3-1B-Instruct.yaml  Meta-Llama-3-7B.yaml  Meta-Llama-3-8B-Instruct.yaml  Meta-Llama-3-8B.yaml  common.yaml
conf/medical_ner_json/: DeepSeek-R1-Distill-Llama-8B.yaml  Meta-Llama-3-1B.yaml  common.yaml
conf/medical_re/: DeepSeek-R1-Distill-Llama-8B.yaml  common.yaml
conf/medical_transformer/: Bio_ClinicalBERT.yaml  common.yaml
conf/mmlu/: Meta-Llama-3-8B.yaml
data/: NER_main_train_new.json
method/: method_forward.py
method/adaptor_avg/: __init__.py  server.py  worker.py
preprocess/: medical_i2b2_converter.py  medical_iob_converter.py  parser.py
prompt/: medical.txt  medical_evaluation.txt  medical_evaluation_1.txt  medical_html.txt  medical_html_evaluation.txt  medical_json.txt  medical_json_evaluation.txt  medical_mix.txt  medical_mix_1.txt  medical_mix_evaluation.txt  medical_modifier.txt  medical_modifier_evaluation.txt
server/: __init__.py  aggregation_server.py
src/: datapipeline_mixin.py
src/algorithm/: __init__.py  loss_avg_algorithm.py
src/command/: NER_evaluator.py  csv_parse.py  evaluator.py  generator.py  iob_converter.py  iob_distribution_analyzer.py  iob_iid_split.py  json_iid_split.py  medical_NER_evaluator.py  medical_iob_converter.py  medical_iob_distribution.py  medical_re_csv_parse.py  session.py  util.py  vllm_generator.py
src/command/NER_evaluation/: common.py  html_form.py  list_form.py  metric.py  token_classification.py
src/command/medical_NER_evaluation/: common.py  html_form.py  list_form.py
src/data_fix/: add_missing_col.py
src/method/: __init__.py  method_forward.py
src/method/FedSA_LoRA/: __init__.py  server.py  worker.py
src/method/adaptor_avg/: __init__.py  data_pipeline.py  server.py  worker.py
src/preprocess/: __init__.py  allocation.py  data_pipeline.py  distribution.py  iob.py  medical_iob_converter.py  parser.py
src/prompt/: medical.txt
src/server/: __init__.py  common.py  sft.py
src/sft/: __init__.py
src/worker/: __init__.py  common.py  sft.py
worker/: __init__.py  aggregation_worker.py
